@startuml
hide circle
hide empty members
skinparam classAttributeIconSize 0

class GroupStorage {
  + isLoading: boolean {static}
  + saveGroupToFile(group: Group): void
  + loadGroupFromFile(groupName: String): Group
  + deleteGroupFile(groupName: String): void
}

interface FileIO<<interface>> {
  + getFileReader(filePath: String): BufferedReader
  + getFileWriter(filePath: String): BufferedWriter
  + deleteFile(filePath: String): boolean
}

class FileIOImpl implements FileIO {
}

class Group {
  - groupName: String
  - expenseList: List<Expense>
  + addMember(memberName: String): User
  + addExpense(expense: Expense): void
  + getGroupName(): String
  + getMembers(): List<User>
  + getExpenseList(): List<Expense>
}

class GroupNameChecker {
  + doesGroupNameExist(groupNameToCheck: String): boolean
}

GroupStorage "1" --> "1" FileIO : uses
GroupStorage "1" --> "*" Group : manages
Group "1" --> "1" GroupNameChecker : uses
Group "*" --> "1" GroupStorage : uses
@enduml